== NEXT VERSION IN PROGRESS

* New matchers:
  - "isA" matches objects that are instances of a given class, but not of any subclass.

* Fixes:
  - Fix GTM compatibility -- avoid shadowing conformsToProtocol:

* Improved matchers:
  - equalToBool has a better description. Thanks to: Jonathan Crooke

* Deleted following items deprecated in v1.8:
  - C++ template function boxNumber
  - HC_conformsToProtocol (which was renamed to "HC_conformsTo")

* Project changes:
  - Update project settings to Xcode 4.6. Thanks to: Florian Buerger
  - Removed CocoaPods spec, since it's maintained at CocoaPods.
  - Fixed unit tests so they remain quiet when handling expected test failures.
  - Replaced older code coverage scripts with XcodeCoverage submodule.


== Version 1.9 ==

23 Nov 2012
* Improved matchers:
  - Changed hasCount/hasCountOf mismatch description so that count comes first (if object has a count).

* Project changes:
  - Fixed warnings revealed by latest Xcode. Thanks to: David Hart
  - Changed iOS Architecture support to "Standard" (which includes armv7s)
  - Changed Mac Architecture support to 64-bit only
  - Converted source, tests, and examples to ARC


== Version 1.8 ==

09 Jul 2012
The primary purpose of this release is to make it easier to add OCHamcrest to iOS projects. No more need to specify "Other Linker Flags"! Depending on your project, you may be able to eliminate:
  * -lstdc++
  * -ObjC

Also, the repository has a new official home: https://github.com/hamcrest/OCHamcrest/

* No need to specify "Other Linker Flags" in iOS projects:
  - Changed all Objective-C++ to Objective-C
  - Eliminated categories

* Deprecated:
  - C++ template function boxNumber.
  - conformsToProtocol clashed with the method of the same name. It has been renamed to "conformsTo".

* Deleted following items deprecated in v1.2:
  - -[HCDescription appendValue]
  - +[HCInvocationMatcher createInvocationForSelector:onClass:]
  - NSObject+SelfDescribingValue


== Version 1.7 ==
