@@ -41,6 +41,14 @@
                   appendText:NSStringFromClass(theClass)];
 }
 
+- (void)describeMismatchOf:(id)item to:(id<HCDescription>)mismatchDescription
+{
+    [[[[mismatchDescription appendText:@"was "]
+                            appendText:NSStringFromClass([item class])]
+                            appendText:@" instance "]
+                            appendDescriptionOf:item];
+}
+
 @end
 
 
